--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@hapi/inert": "^5.2.0",
     "@hapi/vision": "^5.5.2",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.23.0",
     "dotenv": "^8.0.0",
     "hapi-alive": "^2.0.4",
+    "hapi-auth-jwt2": "^10.2.0",
     "hapi-response-time": "^2.0.0",
     "hapi-swaggered": "^3.0.2",
     "hapi-swaggered-ui": "^3.0.1",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.1.1",
     "uuid": "^3.2.1"
   },
